<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="bottom|center"
    android:layout_marginBottom="30dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/start_cooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/cooking_image_width"
            android:layout_height="@dimen/cooking_image_height"
            android:contentDescription="@string/step_start_description"
            android:layout_gravity="center"
            android:src="@drawable/start_cooking" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/original_surfer"
            android:gravity="center_horizontal"
            android:text="@string/step_start_cooking_text"
            android:textSize="@dimen/cooking_textSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_shopping_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/cooking_image_width"
            android:layout_height="@dimen/cooking_image_height"
            android:contentDescription="@string/step_start_description"
            android:layout_gravity="center"
            android:src="@drawable/add_shopping_cart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/original_surfer"
            android:gravity="center_horizontal"
            android:text="@string/step_add_cart_text"
            android:textSize="@dimen/cooking_textSize" />
    </LinearLayout>

</LinearLayout>